--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,8 +15,8 @@
       <!-- Slider contnet -->
       <!-- Header content -->
 
-      <div class="header-content">
-        <div class="header__nav"></div>
+      <div class="header__content">
+        <div class="header__nav">@@include('blocks/nav.html')</div>
         <div class="header__socials"></div>
         <div class="header__see-more"></div>
         <div class="header__slider-controls"></div>
