--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,14 +14,7 @@
       <!-- Swiper -->
       <!-- Slider contnet -->
       <!-- Header content -->
-
-      <div class="header__content">
-        <div class="header__nav">@@include('blocks/nav.html')</div>
-        <div class="header__socials"></div>
-        <div class="header__see-more"></div>
-        <div class="header__slider-controls"></div>
-        <div class="header__scrollbar"></div>
-      </div>
+      @@include('blocks/header-content.html')
     </header>
 
     <script src="./js/index.bundle.js"></script>
