--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,7 +12,8 @@
 
     <header class="header">
       <!-- Swiper -->
-      <!-- Slider contnet -->
+      <!-- Slider content -->
+      <div class="header__slide">@@include('blocks/slide.html')</div>
       <!-- Header content -->
       @@include('blocks/header-content.html')
     </header>
