--- a/src/html/blocks/header-content.html
+++ b/src/html/blocks/header-content.html
@@ -1,4 +1,4 @@
-<div class="header__content">
+<div class="header__content none">
   <div class="header__nav">@@include('./nav.html')</div>
   <div class="header__socials">@@include('./socials.html')</div>
 
