--- a/src/html/blocks/slides-controls.html
+++ b/src/html/blocks/slides-controls.html
@@ -8,8 +8,8 @@
     </button>
   </div>
   <div class="slider__controls-count">
-    <span class="slider__controls-count-current">1</span>
+    <!-- <span class="slider__controls-count-current">1</span>
     /
-    <span class="slider__controls-count-total">5</span>
+    <span class="slider__controls-count-total">5</span> -->
   </div>
 </div>
