--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,8 +12,10 @@
 
     <header class="header">
       <!-- Swiper -->
+      @@include('blocks/swiper.html')
+
       <!-- Slider content -->
-      <div class="header__slide">@@include('blocks/slide.html')</div>
+      <div class="header__slide none">@@include('blocks/slide.html')</div>
       <!-- Header content -->
       @@include('blocks/header-content.html')
     </header>
