--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travel X</title>
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
@@ -18,6 +19,8 @@
       <div class="header__slide none">@@include('blocks/slide.html')</div>
       <!-- Header content -->
       @@include('blocks/header-content.html')
+      <!--  -->
+      @@include('blocks/mobile-nav.html')
     </header>
 
     <script src="./js/index.bundle.js"></script>
