--- a/src/html/blocks/nav.html
+++ b/src/html/blocks/nav.html
@@ -1,6 +1,6 @@
 <nav class="nav">
   <a href="#" class="nav__logo">
-    <img src="../../img/icons/logo.svg" alt="logo" />
+    <img src="./img/icons/logo.svg" alt="logo" />
   </a>
 
   <div class="nav__list">
@@ -13,7 +13,7 @@
   </div>
   <div class="nav__mobile-nav">
     <button id="modalOpen" class="nav-btn">
-      <img src="../../img//icons/nav-btn.svg" alt="nav-button" />
+      <img src="./img//icons/nav-btn.svg" alt="nav-button" />
     </button>
   </div>
 </nav>
